# AutoVP

./: README.md  start.sh
client/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
client/examples/: arxiv_summary.json  deep_research.json  paper_review.json
client/src/: App.tsx  index.css  provider.tsx
client/src/components/: multi-select.tsx  navbar.tsx  theme-provider.tsx
client/src/components/flow/: AgentNode.tsx  BranchNode.tsx  DisplayNode.tsx  FlowNode.tsx  ImageNode.tsx  JavaScriptNode.tsx  JsonNode.tsx  LLMNode.tsx  LabelHandle.tsx  PythonNode.tsx  TextNode.tsx
client/src/components/flow/base/: BaseNode.tsx  EndNode.tsx  FlowNode.tsx  LabelHandle.tsx  StartNode.tsx
client/src/components/flow/editor/: AICopilotDialog.tsx  CodeEditorDialog.tsx  EditInfoDialog.tsx  MarkdownRenderer.tsx
client/src/components/flow/log/: NodeRunLogDetail.tsx  TimelineLog.tsx
client/src/config/: site.ts
client/src/hooks/: use-theme.tsx
client/src/layouts/: default.tsx
client/src/lib/: config.ts  js-runner.worker.ts  llm.ts  utils.ts
client/src/lib/flow/: flow.ts  use-flow-node-types.ts
client/src/pages/: flow.tsx
other/: example_flow.json  transform_v5.py  universal_node_sdk.py
server/: .env.example  .flake8  README.md  main.py  pyproject.toml
server/docker/: PythonRunnerDockerfile
